learn more overlapping corrected

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -208,7 +208,7 @@ blockquote:before {
 .learn-more {
 	position: absolute;
 	left: 0;
-	bottom: 60px;
+	bottom: 1em;
 	text-align: center;
 	font-size: 1.4em;
 	width: 100%;
